added bd with values

--- a/index.html
+++ b/index.html
@@ -34,26 +34,26 @@
     <label for="retribuicao">Retribuição por Titulação:</label>
     <select id="retribuicao">
         <option value="">Selecione...</option>
-        <option value="sem_rt">SEM RT</option>
-        <option value="aperfeicoamento">Aperfeiçoamento</option>
-        <option value="especializacao">Especialização</option>
-        <option value="mestrado">Mestrado</option>
-        <option value="doutorado">Doutorado</option>
+        <option value="srt">SEM RT</option>
+        <option value="ape">Aperfeiçoamento</option>
+        <option value="esp">Especialização</option>
+        <option value="mes">Mestrado</option>
+        <option value="dou">Doutorado</option>
     </select>
 
     <label for="regime">Regime de Trabalho:</label>
     <select id="regime">
         <option value="">Selecione...</option>
-        <option value="20h">20H</option>
-        <option value="40h">40H</option>
-        <option value="40h_de">40H DE</option>
+        <option value="p20h">20H</option>
+        <option value="p40h">40H</option>
+        <option value="p40hde">40H DE</option>
     </select>
 
     <label for="aumento">Ano do Aumento:</label>
     <select id="aumento">
         <option value="">Selecione...</option>
-        <option value="2025">2025</option>
-        <option value="2026">2026</option>
+        <option value="a2025">2025</option>
+        <option value="a2026">2026</option>
     </select>
 
     <button type="submit">Enviar</button>
@@ -65,15 +65,16 @@
         var classeSelect = document.getElementById("classe");
         classeSelect.innerHTML = "";
         var classes = [];
+        var classesVal =["a", "b", "c", "d", "e"];
         if (carreira === "magisterio_superior") {
-            classes = ["A", "B", "C", "D", "E"];
+            classes = [["A","a"] , ["B","b"], ["C","c"], ["D","d"], ["E","e"]];
         } else if (carreira === "ebtt") {
-            classes = ["D I", "D II", "D III", "D IV", "TITULAR"];
+            classes = [["D I","a"], ["D II","b"], ["D III","c"], ["D IV","d"], ["TITULAR","e"]];
         }
         classes.forEach(function(classe) {
             var option = document.createElement("option");
-            option.text = classe;
-            option.value = classe;
+            option.text = classe[0];
+            option.value = classe[1];
             classeSelect.add(option);
         });
         updateNiveis();
@@ -84,13 +85,13 @@
         var nivelSelect = document.getElementById("nivel");
         nivelSelect.innerHTML = "";
         var niveis = [];
-        if (classe === "E" || classe === "TITULAR") {
+        if (classe === "E" || classe === "TITULAR" || classe=== "e") {
             niveis = ["1"];
-        } else if (classe === "D" || classe === "D IV" || classe === "C" || classe === "D III") {
+        } else if (classe === "D" || classe === "D IV" || classe === "C" || classe === "D III" || classe=== "d" || classe=== "c") {
             niveis = ["1", "2", "3", "4"];
-        } else if (classe === "B" || classe === "D II") {
+        } else if (classe === "B" || classe === "D II" || classe=== "b") {
             niveis = ["1", "2"];
-        } else if (classe === "A" || classe === "D I") {
+        } else if (classe === "A" || classe === "D I" || classe=== "a") {
             niveis = ["1", "2"];
         }
         niveis.forEach(function(nivel) {
@@ -109,11 +110,484 @@
             nivel: document.getElementById("nivel").value,
             retribuicao: document.getElementById("retribuicao").value,
             regime: document.getElementById("regime").value,
-            aumento: document.getElementById("aumento").value
+            aumento: document.getElementById("aumento").value,
+            chaveTest: document.getElementById("classe").value + document.getElementById("nivel").value
         };
         console.log(formData);
-        // Aqui você pode enviar os dados para onde quer que precise, como uma API ou outro lugar.
+        console.log(banco[formData.regime][formData.aumento][formData.retribuicao][formData.chaveTest]);
+      
     });
+
+
+    var banco = {"p20h":{ "a2026":{
+    "srt":{
+        "e1":"6.042,44",
+        "d4":"5.493,12",
+        "d3":"5.256,58",
+        "d2":"5.030,22",
+        "d1":"4.813,60",
+        "c4":"3.850,88",
+        "c3":"3.685,05",
+        "c2":"3.526,37",
+        "c1":"3.374,51",
+        "b2":"3.198,59",
+        "b1":"3.046,28",
+        "a2":"2.887,47",
+        "a1":"2.749,97",
+    },
+    "ape":{
+        "e1":"6.344,55",
+        "d4":"5.767,77",
+        "d3":"5.519,40",
+        "d2":"5.281,72",
+        "d1":"5.054,28",
+        "c4":"4.043,42",
+        "c3":"3.869,30",
+        "c2":"3.702,68",
+        "c1":"3.543,24",
+        "b2":"3.358,52",
+        "b1":"3.198,59",
+        "a2":"3.031,84",
+        "a1":"2.887,46",
+    },
+    "esp":{
+        "e1":"6.646,68",
+        "d4":"6.042,43",
+        "d3":"5.782,23",
+        "d2":"5.533,24",
+        "d1":"5.294,96",
+        "c4":"4.235,97",
+        "c3":"4.053,56",
+        "c2":"3.879,00",
+        "c1":"3.711,96",
+        "b2":"3.518,45",
+        "b1":"3.350,90",
+        "a2":"3.176,21",
+        "a1":"3.024,96",
+    },
+    "mes":{
+        "e1":"7.553,05",
+        "d4":"6.866,40",
+        "d3":"6.570,72",
+        "d2":"6.287,77",
+        "d1":"6.017,01",
+        "c4":"4.813,60",
+        "c3":"4.606,32",
+        "c2":"4.407,96",
+        "c1":"4.218,14",
+        "b2":"3.998,24",
+        "b1":"3.807,85",
+        "a2":"3.609,33",
+        "a1":"3.437,46",
+    },
+    "dou":{
+        "e1":"9.516,84",
+        "d4":"8.651,67",
+        "d3":"8.279,11",
+        "d2":"7.922,59",
+        "d1":"7.581,43",
+        "c4":"6.065,14",
+        "c3":"5.803,96",
+        "c2":"5.554,03",
+        "c1":"5.314,86",
+        "b2":"5.037,78",
+        "b1":"4.797,89",
+        "a2":"4.547,76",
+        "a1":"4.331,20",
+    },
+}, 
+"a2025":{
+    "srt":{
+        "e1":"5.838,10",
+        "d4":"5.307,36",
+        "d3":"5.078,82",
+        "d2":"4.860,11",
+        "d1":"4.650,83",
+        "c4":"3.720,66",
+        "c3":"3.560,44",
+        "c2":"3.407,12",
+        "c1":"3.260,40",
+        "b2":"3.090,43",
+        "b1":"2.943,26",
+        "a2":"2.789,82",
+        "a1":"2.656,97",
+    },
+    "ape":{
+        "e1":"6.130,00",
+        "d4":"5.572,73",
+        "d3":"5.332,75",
+        "d2":"5.103,11",
+        "d1":"4.883,36",
+        "c4":"3.906,69",
+        "c3":"3.738,46",
+        "c2":"3.577,47",
+        "c1":"3.423,42",
+        "b2":"3.244,95",
+        "b1":"3.090,42",
+        "a2":"2.929,31",
+        "a1":"2.789,82",
+    },
+    "esp":{
+        "e1":"6.421,91",
+        "d4":"5.838,10",
+        "d3":"5.586,70",
+        "d2":"5.346,12",
+        "d1":"5.115,91",
+        "c4":"4.092,72",
+        "c3":"3.916,48",
+        "c2":"3.747,83",
+        "c1":"3.586,44",
+        "b2":"3.399,47",
+        "b1":"3.237,59",
+        "a2":"3.068,81",
+        "a1":"2.922,67",
+    },
+    "mes":{
+        "e1":"7,297,63",
+        "d4":"6.634,21",
+        "d3":"6.348,52",
+        "d2":"6.075,14",
+        "d1":"5.813,53",
+        "c4":"4.650,82",
+        "c3":"4.450,55",
+        "c2":"4.258,90",
+        "c1":"4.075,50",
+        "b2":"3.863,03",
+        "b1":"3.679,08",
+        "a2":"3.487,28",
+        "a1":"3.321,22",
+    },
+    "dou":{
+        "e1":"9.195,02",
+        "d4":"8.359,10",
+        "d3":"7.999,14",
+        "d2":"7.654,68",
+        "d1":"7.325,05",
+        "c4":"5.860,04",
+        "c3":"5.607,69",
+        "c2":"5.366,21",
+        "c1":"5.135,13",
+        "b2":"4.867,42",
+        "b1":"4.635,64",
+        "a2":"4.393,97",
+        "a1":"4.184,73",
+    },
+}
+},
+"p40h":{ "a2026":{
+    "srt":{
+        "e1":"8.459,41",
+        "d4":"7.690,37",
+        "d3":"7.359,21",
+        "d2":"7.042,30",
+        "d1":"6.739,05",
+        "c4":"5.391,23",
+        "c3":"5.159,07",
+        "c2":"4.936,91",
+        "c1":"4.724,32",
+        "b2":"4.478,03",
+        "b1":"4.264,79",
+        "a2":"4.042,45",
+        "a1":"3.849,95",
+    },
+    "ape":{
+        "e1":"9.093,87",
+        "d4":"8.267,15",
+        "d3":"7.911,14",
+        "d2":"7.570,47",
+        "d1":"7.244,47",
+        "c4":"5.795,57",
+        "c3":"5.546,00",
+        "c2":"5.307,18",
+        "c1":"5.078,64",
+        "b2":"4.813,88",
+        "b1":"4.584,65",
+        "a2":"4.345,64",
+        "a1":"4.138,70",        
+    },
+    "esp":{
+        "e1":"9.728,33",
+        "d4":"8.843,93",
+        "d3":"8.463,09",
+        "d2":"8.098,65",
+        "d1":"7.749,91",
+        "c4":"6.199,92",
+        "c3":"5.932,94",
+        "c2":"5.677,45",
+        "c1":"5.432,97",
+        "b2":"5.149,74",
+        "b1":"4.904,51",
+        "a2":"4.648,83",
+        "a1":"4.427,45",
+    },
+    "mes":{
+        "e1":"11.631,69",
+        "d4":"10.574,26",
+        "d3":"10.118,91",
+        "d2":"9.683,16",
+        "d1":"9.266,19",
+        "c4":"7.412,94",
+        "c3":"7.093,72",
+        "c2":"6.788,25",
+        "c1":"6.495,94",
+        "b2":"6.157,29",
+        "b1":"5.864,08",
+        "a2":"5.558,37",
+        "a1":"5.293,68",
+    },
+    "dou":{
+        "e1":"15.755,65",
+        "d4":"14.323,31",
+        "d3":"13.706,52",
+        "d2":"13.116,28",
+        "d1":"12.551,47",
+        "c4":"10.041,17",
+        "c3":"9.608,77",
+        "c2":"9.195,00",
+        "c1":"8.799,04",
+        "b2":"8.340,33",
+        "b1":"7.943,16",
+        "a2":"7.529,07",
+        "a1":"7.170,54",
+    },
+}, 
+"a2025":{
+    "srt":{
+        "e1":"8.173,35",
+        "d4":"7.430,31",
+        "d3":"7.110,35",
+        "d2":"6.804,16",
+        "d1":"6.511,16",
+        "c4":"5.208,92",
+        "c3":"4.984,61",
+        "c2":"4.769,96",
+        "c1":"4.564,56",
+        "b2":"4.326,60",
+        "b1":"4.120,57",
+        "a2":"3.905,75",
+        "a1":"3.719,76",
+    },
+    "ape":{
+        "e1":"8.786,34",
+        "d4":"7.987,58",
+        "d3":"7.643,62",
+        "d2":"7.314,47",
+        "d1":"6.999,49",
+        "c4":"5.599,59",
+        "c3":"5.358,46",
+        "c2":"5.127,71",
+        "c1":"4.906,90",
+        "b2":"4.651,09",
+        "b1":"4.429,61",
+        "a2":"4.198,68",
+        "a1":"3.998,74",
+    },
+    "esp":{
+        "e1":"9.399,35",
+        "d4":"8.544,86",
+        "d3":"8.176,90",
+        "d2":"7.824,79",
+        "d1":"7.487,83",
+        "c4":"5.990,26",
+        "c3":"5.732,31",
+        "c2":"5.485,46",
+        "c1":"5.249,25",
+        "b2":"4.975,59",
+        "b1":"4.738,66",
+        "a2":"4.491,62",
+        "a1":"4.277,73",
+    },
+    "mes":{
+        "e1":"11.238,35",
+        "d4":"10.216,67",
+        "d3":"9.776,72",
+        "d2":"9.355,71",
+        "d1":"8.952,84",
+        "c4":"7.162,26",
+        "c3":"6.853,84",
+        "c2":"6.558,70",
+        "c1":"6.276,27",
+        "b2":"5.949,07",
+        "b1":"5.665,78",
+        "a2":"5.370,41",
+        "a1":"5.114,67",
+    },
+    "dou":{
+        "e1":"15.222,85",
+        "d4":"13.838,95",
+        "d3":"13.243,01",
+        "d2":"12.672,74",
+        "d1":"12.127,02",
+        "c4":"9.701,61",
+        "c3":"9.283,84",
+        "c2":"8.884,05",
+        "c1":"8.501,49",
+        "b2":"8.058,29",
+        "b1":"7.674,55",
+        "a2":"7.274,46",
+        "a1":"6.928,05",
+
+    },
+}
+},
+"p40hde":{
+"a2026":{
+    "srt":{
+        "e1":"12.084,88",
+        "d4":"10.986,24",
+        "d3":"10.513,15",
+        "d2":"10.060,43",
+        "d1":"9.627,21",
+        "c4":"7.701,76",
+        "c3":"7.370,11",
+        "c2":"7.05273",
+        "c1":"6.749,03",
+        "b2":"6.397,19",
+        "b1":"6.09255",
+        "a2":"5.774,94",
+        "a1":"5.499,93",
+    },
+    "ape":{
+        "e1":"13.293,36",
+        "d4":"12.084,87",
+        "d3":"11.564,46",
+        "d2":"11.066,47",
+        "d1":"10.589,93",
+        "c4":"8.471,93",
+        "c3":"8.107,11",
+        "c2":"7.758,00",
+        "c1":"7.423,93",
+        "b2":"7.036,90",
+        "b1":"6.701,81",
+        "a2":"6.352,43",
+        "a1":"6.049,93",
+
+    },
+    "esp":{
+        "e1":"14.501,85",
+        "d4":"13.183,50",
+        "d3":"12.615,79",
+        "d2":"12.072,52",
+        "d1":"11.552,65",
+        "c4":"9.242,11",
+        "c3":"8.844,13",
+        "c2":"8.463,28",
+        "c1":"8.098,83",
+        "b2":"7.676,62",
+        "b1":"7.311,07",
+        "a2":"6.929,92",
+        "a1":"6.599,92",
+    },
+    "mes":{
+        "e1":"18.127,31",
+        "d4":"16.479,37",
+        "d3":"15.769,73",
+        "d2":"15.090,65",
+        "d1":"14.440,81",
+        "c4":"11.552,64",
+        "c3":"11.055,16",
+        "c2":"10.579,10",
+        "c1":"10.123,54",
+        "b2":"9.595,78",
+        "b1":"9.138,83",
+        "a2":"8.662,40",
+        "a1":"8.249,90",
+    },
+    "dou":{
+        "e1":"25.982,49",
+        "d4":"23.620,43",
+        "d3":"22.603,28",
+        "d2":"21.629,94",
+        "d1":"20.698,50",
+        "c4":"16.558,79",
+        "c3":"15.845,73",
+        "c2":"15.163,38",
+        "c1":"14.510,41",
+        "b2":"13.753,95",
+        "b1":"13.098,99",
+        "a2":"12.416,11",
+        "a1":"11.824,86",
+    },
+},
+"a2025":{
+    "srt":{
+        "e1":"11.676,21",
+        "d4":"10.614,73",
+        "d3":"10.157,64",
+        "d2":"09.720,23",
+        "d1":"09.301,65",
+        "c4":"7.441,31",
+        "c3":"7.120,88",
+        "c2":"6.814,23",
+        "c1":"6.520,80",
+        "b2":"6.180,86",
+        "b1":"5.886,53",
+        "a2":"5.579,65",
+        "a1":"5.313,95",
+    },
+    "ape":{
+        "e1":"12.843,83",
+        "d4":"11.676,20",
+        "d3":"11.173,40",
+        "d2":"10.692,24",
+        "d1":"10.231,81",
+        "c4":"8.185,44",
+        "c3":"7.832,96",
+        "c2":"7.495,66",
+        "c1":"7.172,88",
+        "b2":"6.798,94",
+        "b1":"6.475,18",
+        "a2":"6.137,61",
+        "a1":"5.845,34",
+    },
+    "esp":{
+        "e1:":"14.011,45",
+        "d4":"12.737,68",
+        "d3":"12.189,16",
+        "d2":"11.664,27",
+        "d1":"11.161,98",
+        "c4":"8.929,58",
+        "c3":"8.545,05",
+        "c2":"8.177,08",
+        "c1":"7.824,96",
+        "b2":"7.417,03",
+        "b1":"7.063,83",
+        "a2":"6.695,58",
+        "a1":"6.376,74",
+    },
+    "mes":{
+        "e1":"17.514,31",
+        "d4":"15.922,09",
+        "d3":"15.236,45",
+        "d2":"14.580,34",
+        "d1":"13.952,48",
+        "c4":"11.161,97",
+        "c3":"10.681,31",
+        "c2":"10.221,35",
+        "c1":"9.781,20",
+        "b2":"9.271,28",
+        "b1":"8.829,79",
+        "a2":"8.369,47",
+        "a1":"7.970,92",
+    },
+    "dou":{
+        "e1":"25.103,85",
+        "d4":"22.821,67",
+        "d3":"21.838,92",
+        "d2":"20.898,49",
+        "d1":"19.998,55",
+        "c4":"15.998,83",
+        "c3":"15.309,88",
+        "c2":"14.650,61",
+        "c1":"14.019,72",
+        "b2":"13.288,84",
+        "b1":"12.656,03",
+        "a2":"11.996,24",
+        "a1":"11.424,99",
+    },
+},
+}
+    }
 </script>
 
 </body>
